--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <script src="script.js"></script>
-<!--<img src="/foxy.png" class="styled-image" alt="Description of image">-->
+<script src="/foxy.png" class="styled-image" alt="Description of image"></script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
