--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button onclick="translateToCipher()">To Cipher</button>
     <button onclick="clearFields()">Clear</button>
     <textarea id="outputText" readonly placeholder="Output..."></textarea>
-
+    <img src="foxy.png" class="styled-image" alt="Description of image">
     <script src="script.js"></script>
 </body>
 </html>
