--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cipher Translator</title>
+    <title>⌖⎐⟒〄Ϩ⌇⟒⌖◎⎐</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Cipher Translator</h1>
+    <h1>⌖⎐⟒〄Ϩ⌇⟒⌖◎⎐</h1>
     <textarea id="inputText" placeholder="Enter text here..."></textarea>
     <div id="keyboardPanel"></div>
     <button onclick="translateToAlphabet()">To Alphabet</button>
     <button onclick="translateToCipher()">To Cipher</button>
     <button onclick="clearFields()">Clear</button>
     <textarea id="outputText" readonly placeholder="Output..."></textarea>
-    <!--<img src="foxy.png" class="styled-image" alt="Description of image">-->
+    <img src="foxy.png" class="styled-image" alt="Description of image">
     <script src="script.js"></script>
 </body>
 </html>
