--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <button onclick="clearFields()">Clear</button>
     
     <!-- Output fields -->
-    <textarea id="outputText" readonly placeholder="Translation to Alphabet or Cipher..."></textarea>
+    <textarea id="outputText" readonly placeholder="Translation..."></textarea>
     <textarea id="alternativeOutputText" readonly placeholder="Alternative Translation..."></textarea>
 
     <!-- Footer Section -->
