--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
 <img src="/foxy.png" class="center-image" alt=""
     style="width: 150px; height: auto;">
 <textarea id="foxInput" placeholder="..." class="fox-box"
-        style="width: 20%; height: 30px; font-size: large; color: rgb(225, 225, 225);
-                background-color: rgb(81, 81, 81); border: 1px solid rgb(120, 120, 120);
-                border-radius: 5px; text-align: center;">
+    style="width: 20%; height: 30px; font-size: large; color: rgb(225, 225, 225);
+        background-color: rgb(81, 81, 81); border: 1px solid rgb(120, 120, 120);
+        border-radius: 5px; text-align: center; padding-top: 7px;">
 </textarea>
 <button id="submitFox" onclick="checkFox()"
         style="margin-top: 10px; padding: 10px 20px; font-size: 16px; color: rgb(225, 225, 225);
