--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <!-- Fox Screen -->
+    <!-- Fox Screen
 <div id="foxScreen"
 style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
     display: flex; flex-direction: column; justify-content: center; align-items: center;
@@ -23,7 +23,7 @@ style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
     background-color: rgb(120, 120, 120); z-index: 10; opacity: 1; transition: z-index 0.3s, opacity 0.3s;">
 <img src="/foxy.png" class="center-image" alt=""
     style="width: 150px; height: auto;">
-<textarea id="foxInput" placeholder="..." class="fox-box"
+    <textarea id="foxInput" placeholder="..." class="fox-box"
     style="width: 20%; height: 30px; font-size: large; color: rgb(225, 225, 225);
         background-color: rgb(81, 81, 81); border: 1px solid rgb(120, 120, 120);
         border-radius: 5px; text-align: center; padding-top: 7px;">
@@ -34,12 +34,22 @@ style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             border-radius: 5px; cursor: pointer;">
     Submit
 </button>
-</div>
+</div>-->
 
     <!-- Main Content -->
     <h1>⌖⎐⟒〄Ϩ⌇⟒⌖◎⎐</h1>
     <h2>⌖⍥Ξ Ξ〄⍠ ⎔⎐◎⊙Ξ⚲⌖ Ϩ◎⌇⚶Ξ⎐Ϩ</h2>
     
+    <!-- Menu Button -->
+    <div class="dropdown">
+        <button class="dropbtn">⨀Ξ〄⋑</button>
+        <div class="dropdown-content">
+            <a href="#">About</a>
+            <a href="#">Decrypt</a>
+            <a href="#">Cryptology</a>
+        </div>
+        </div>
+
     <!-- Input field -->
     <textarea id="inputText" placeholder="Enter text here..."></textarea>
     
