--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <!-- Fox Screen
+    <!-- Fox Screen-->
 <div id="foxScreen"
 style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
     display: flex; flex-direction: column; justify-content: center; align-items: center;
@@ -34,7 +34,7 @@ style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             border-radius: 5px; cursor: pointer;">
     Submit
 </button>
-</div>-->
+</div>
 
     <!-- Main Content -->
     <h1>⌖⎐⟒〄Ϩ⌇⟒⌖◎⎐</h1>
