--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <script src="script.js" defer></script>
 </head>
-<body>
-    <!-- Fox Screen-->
+<body class="home-page">
+    <!-- Foxy Input Screen -->
 <div id="foxScreen"
 style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
     display: flex; flex-direction: column; justify-content: center; align-items: center;
@@ -44,11 +44,11 @@ style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
     <div class="dropdown">
         <button class="dropbtn">⨀Ξ〄⋑</button>
         <div class="dropdown-content">
-            <a href="#">About</a>
-            <a href="#">Decrypt</a>
-            <a href="#">Cryptology</a>
+            <a href="about.html">About</a>
+            <a href="decrypt.html">Decrypt</a>
+            <a href="cryptology.html">Cryptology</a>
         </div>
-        </div>
+    </div>
 
     <!-- Input field -->
     <textarea id="inputText" placeholder="Enter text here..."></textarea>
@@ -69,7 +69,9 @@ style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
     <footer>
         <p>The End Project Solvers: <a href="https://discord.com/invite/eJGpsbpM86">Discord</a></p>
         <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
+        <!--<p>Version 1.0 | Contact: <a href="mailto:zs6avz@proton.me">zs6avz@proton.me</a></p>-->
     </footer>
 </body>
 </html>
+
 
