--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
         <button class="dropbtn">⨀Ξ〄⋑</button>
         <div class="dropdown-content">
             <a href="about.html">About</a>
-            <a href="decrypt.html">Decrypt</a>
-            <a href="cryptology.html">Cryptology</a>
+            <a href="decrypt.html">Decrypt/Encrypt</a>
+            <a href="cryptology.html">Cryptography</a>
         </div>
     </div>
 
