--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
         border-radius: 5px; text-align: center; padding-top: 7px;">
 </textarea>
 <button id="submitFox" onclick="checkFox()"
-        style="margin-top: 10px; padding: 10px 20px; font-size: 16px; color: rgb(225, 225, 225);
+        style="margin-top: 10px; padding: 10px 20px; font-size: 1rem; color: rgb(225, 225, 225);
             background-color: rgb(81, 81, 81); border: 1px solid rgb(120, 120, 120);
-            border-radius: 5px; cursor: pointer;">
+            border-radius: 5px; cursor: pointer;width: 100px;">
     Submit
 </button>
 </div>
@@ -44,8 +44,9 @@ style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
     <div class="dropdown">
         <button class="dropbtn">⨀Ξ〄⋑</button>
         <div class="dropdown-content">
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="decrypt.html">Decrypt/Encrypt</a>
+            <a href="decrypt.html">Encrypt/Decrypt</a>
             <a href="cryptology.html">Cryptography</a>
         </div>
     </div>
@@ -67,11 +68,10 @@ style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
 
     <!-- Footer Section -->
     <footer>
-        <p>The End Project Solvers: <a href="https://discord.com/invite/eJGpsbpM86">Discord</a></p>
+        <!--<p>The End Project Solvers: <a href="https://discord.com/invite/eJGpsbpM86">Discord</a></p>-->
         <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
         <!--<p>Version 1.0 | Contact: <a href="mailto:zs6avz@proton.me">zs6avz@proton.me</a></p>-->
     </footer>
 </body>
 </html>
-
 
