--- a/decrypt.html
+++ b/decrypt.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decrypt</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </head>
 <body class="decrypt-page">
@@ -20,27 +21,33 @@
             <option value="10">Decimal (Base 10)</option>
             <option value="16">Hexadecimal (Base 16)</option>
         </select>
-        <button onclick="encryptBinary(getSelectedBase())">Encrypt</button>
-        <button onclick="decryptBinary(getSelectedBase())">Decrypt</button>
+        <div class="button-container">
+            <button onclick="encryptBinary(getSelectedBase())">Encrypt</button>
+            <button onclick="decryptBinary(getSelectedBase())">Decrypt</button>
+        </div>
         <p class="binary-output"></p>
     </div>
 
-    <!-- Jacquard
+    <!-- Jacquard -->
     <div class="method">
         <h2>Jacquard</h2>
         <textarea class="jacquard-input" placeholder="Enter text..."></textarea>
-        <button onclick="encryptJacquard()">Encrypt</button>
-        <button onclick="decryptJacquard()">Decrypt</button>
+        <div class="button-container">
+            <button onclick="encryptJacquard()">Encrypt</button>
+            <button onclick="decryptJacquard()">Decrypt</button>
+        </div>
         <p class="jacquard-output"></p>
-    </div>-->
+    </div>
 
     <!-- Caesar Cipher -->
     <div class="method">
         <h2>Caesar Cipher</h2>
         <textarea class="caesar-input" placeholder="Enter text..."></textarea>
         <input type="number" class="caesar-shift" value="3" min="1" max="25">
-        <button onclick="encryptCaesar(getShiftValue())">Encrypt</button>
-        <button onclick="decryptCaesar(getShiftValue())">Decrypt</button>
+        <div class="button-container">
+            <button onclick="encryptCaesar(getShiftValue())">Encrypt</button>
+            <button onclick="decryptCaesar(getShiftValue())">Decrypt</button>
+        </div>
         <p class="caesar-output"></p>
     </div>
 
@@ -49,8 +56,10 @@
         <h2>Vigenère Cipher</h2>
         <textarea class="vigenere-input" placeholder="Enter text..."></textarea>
         <input type="text" class="vigenere-key" placeholder="Enter key">
-        <button onclick="encryptVigenere(document.querySelector('.vigenere-key').value)">Encrypt</button>
-        <button onclick="decryptVigenere(document.querySelector('.vigenere-key').value)">Decrypt</button>
+        <div class="button-container">
+            <button onclick="encryptVigenere(document.querySelector('.vigenere-key').value)">Encrypt</button>
+            <button onclick="decryptVigenere(document.querySelector('.vigenere-key').value)">Decrypt</button>
+        </div>
         <p class="vigenere-output"></p>
     </div>
 
@@ -58,17 +67,21 @@
     <div class="method">
         <h2>Atbash Cipher</h2>
         <textarea class="atbash-input" placeholder="Enter text..."></textarea>
-        <button onclick="encryptAtbash()">Encrypt</button>
-        <button onclick="decryptAtbash()">Decrypt</button>
+        <div class="button-container">
+            <button onclick="encryptAtbash()">Encrypt</button>
+            <button onclick="decryptAtbash()">Decrypt</button>
+        </div>
         <p class="atbash-output"></p>
     </div>
 
-    <!--Base64-->
+    <!-- Base64 -->
     <div class="method">
         <h2>Base64</h2>
         <textarea class="base64-input" placeholder="Enter text..."></textarea>
-        <button onclick="encryptBase64()">Encode</button>
-        <button onclick="decryptBase64()">Decode</button>
+        <div class="button-container">
+            <button onclick="encryptBase64()">Encode</button>
+            <button onclick="decryptBase64()">Decode</button>
+        </div>
         <p class="base64-output"></p>
     </div>
 
@@ -81,91 +94,122 @@
             <option value="/">Slash Separator</option>
             <option value="-">Dash Separator</option>
         </select>
-        <button onclick="encryptMorse(document.querySelector('.morse-separator').value)">Encrypt</button>
-        <button onclick="decryptMorse(document.querySelector('.morse-separator').value)">Decrypt</button>
+        <div class="button-container">
+            <button onclick="encryptMorse(document.querySelector('.morse-separator').value)">Encrypt</button>
+            <button onclick="decryptMorse(document.querySelector('.morse-separator').value)">Decrypt</button>
+        </div>
         <p class="morse-output"></p>
     </div>
 
     <!-- AES -->
-<div class="method">
-    <h2>AES</h2>
-    <textarea class="AES-input" placeholder="Enter text..."></textarea>
-    <input type="text" class="AES-key" placeholder="Enter secret key">
-    <select class="AES-mode">
-        <option value="ECB">ECB (Default)</option>
-        <option value="CBC">CBC (Cipher Block Chaining)</option>
-        <option value="CFB">CFB (Cipher Feedback)</option>
-        <option value="OFB">OFB (Output Feedback)</option>
-    </select>
-    <button onclick="encryptCipher('AES', getSelectedMode('AES'))">Encrypt</button>
-    <button onclick="decryptCipher('AES', getSelectedMode('AES'))">Decrypt</button>
-    <p class="AES-output"></p>
-</div>
+    <div class="method">
+        <h2>AES</h2>
+        <textarea class="AES-input" placeholder="Enter text..."></textarea>
+        <input type="text" class="AES-key" placeholder="Enter secret key">
+        <select class="AES-mode">
+            <option value="ECB">ECB (Default)</option>
+            <option value="CBC">CBC (Cipher Block Chaining)</option>
+            <option value="CFB">CFB (Cipher Feedback)</option>
+            <option value="OFB">OFB (Output Feedback)</option>
+        </select>
+        <div class="button-container">
+            <button onclick="encryptCipher('AES', getSelectedMode('AES'))">Encrypt</button>
+            <button onclick="decryptCipher('AES', getSelectedMode('AES'))">Decrypt</button>
+        </div>
+        <p class="AES-output"></p>
+    </div>
 
-<!-- DES -->
-<div class="method">
-    <h2>DES</h2>
-    <textarea class="DES-input" placeholder="Enter text..."></textarea>
-    <input type="text" class="DES-key" placeholder="Enter secret key">
-    <select class="DES-mode">
-        <option value="ECB">ECB (Default)</option>
-        <option value="CBC">CBC (Cipher Block Chaining)</option>
-    </select>
-    <button onclick="encryptCipher('DES', getSelectedMode('DES'))">Encrypt</button>
-    <button onclick="decryptCipher('DES', getSelectedMode('DES'))">Decrypt</button>
-    <p class="DES-output"></p>
-</div>
+    <!-- DES -->
+    <div class="method">
+        <h2>DES</h2>
+        <textarea class="DES-input" placeholder="Enter text..."></textarea>
+        <input type="text" class="DES-key" placeholder="Enter secret key">
+        <select class="DES-mode">
+            <option value="ECB">ECB (Default)</option>
+            <option value="CBC">CBC (Cipher Block Chaining)</option>
+        </select>
+        <div class="button-container">
+            <button onclick="encryptCipher('DES', getSelectedMode('DES'))">Encrypt</button>
+            <button onclick="decryptCipher('DES', getSelectedMode('DES'))">Decrypt</button>
+        </div>
+        <p class="DES-output"></p>
+    </div>
 
-<!-- Triple DES -->
-<div class="method">
-    <h2>Triple DES</h2>
-    <textarea class="TripleDES-input" placeholder="Enter text..."></textarea>
-    <input type="text" class="TripleDES-key" placeholder="Enter secret key">
-    <select class="TripleDES-mode">
-        <option value="ECB">ECB (Default)</option>
-        <option value="CBC">CBC (Cipher Block Chaining)</option>
-    </select>
-    <button onclick="encryptCipher('TripleDES', getSelectedMode('TripleDES'))">Encrypt</button>
-    <button onclick="decryptCipher('TripleDES', getSelectedMode('TripleDES'))">Decrypt</button>
-    <p class="TripleDES-output"></p>
-</div>
+    <!-- Triple DES -->
+    <div class="method">
+        <h2>Triple DES</h2>
+        <textarea class="TripleDES-input" placeholder="Enter text..."></textarea>
+        <input type="text" class="TripleDES-key" placeholder="Enter secret key">
+        <select class="TripleDES-mode">
+            <option value="ECB">ECB (Default)</option>
+            <option value="CBC">CBC (Cipher Block Chaining)</option>
+        </select>
+        <div class="button-container">
+            <button onclick="encryptCipher('TripleDES', getSelectedMode('TripleDES'))">Encrypt</button>
+            <button onclick="decryptCipher('TripleDES', getSelectedMode('TripleDES'))">Decrypt</button>
+        </div>
+        <p class="TripleDES-output"></p>
+    </div>
 
-<!-- RC4 -->
-<div class="method">
-    <h2>RC4</h2>
-    <textarea class="RC4-input" placeholder="Enter text..."></textarea>
-    <input type="text" class="RC4-key" placeholder="Enter secret key">
-    <button onclick="encryptCipher('RC4', 'ECB')">Encrypt</button>
-    <button onclick="decryptCipher('RC4', 'ECB')">Decrypt</button>
-    <p class="RC4-output"></p>
-</div>
+    <!-- RC4 -->
+    <div class="method">
+        <h2>RC4</h2>
+        <textarea class="RC4-input" placeholder="Enter text..."></textarea>
+        <input type="text" class="RC4-key" placeholder="Enter secret key">
+        <div class="button-container">
+            <button onclick="encryptCipher('RC4', 'ECB')">Encrypt</button>
+            <button onclick="decryptCipher('RC4', 'ECB')">Decrypt</button>
+        </div>
+        <p class="RC4-output"></p>
+    </div>
 
-<!-- Rabbit -->
-<div class="method">
-    <h2>Rabbit</h2>
-    <textarea class="Rabbit-input" placeholder="Enter text..."></textarea>
-    <input type="text" class="Rabbit-key" placeholder="Enter secret key">
-    <button onclick="encryptCipher('Rabbit', 'ECB')">Encrypt</button>
-    <button onclick="decryptCipher('Rabbit', 'ECB')">Decrypt</button>
-    <p class="Rabbit-output"></p>
-</div>
+    <!-- Rabbit -->
+    <div class="method">
+        <h2>Rabbit</h2>
+        <textarea class="Rabbit-input" placeholder="Enter text..."></textarea>
+        <input type="text" class="Rabbit-key" placeholder="Enter secret key">
+        <div class="button-container">
+            <button onclick="encryptCipher('Rabbit', 'ECB')">Encrypt</button>
+            <button onclick="decryptCipher('Rabbit', 'ECB')">Decrypt</button>
+        </div>
+        <p class="Rabbit-output"></p>
+    </div>
 
-    <!--SHA-256 Hashing-->
+    <!-- SHA-256 Hashing -->
     <div class="method">
         <h2>SHA-256</h2>
         <textarea class="sha256-input" placeholder="Enter text to hash..."></textarea>
-        <button onclick="hashSHA256()">Generate Hash</button>
+        <div class="button-container">
+            <button onclick="hashSHA256()">Generate Hash</button>
+        </div>
         <p class="sha256-output"></p>
     </div>
 
-    <!--HMAC Authentication-->
+    <!-- HMAC Authentication -->
     <div class="method">
         <h2>HMAC Authentication</h2>
         <textarea class="hmac-input" placeholder="Enter text to generate HMAC..."></textarea>
-        <button onclick="generateHMAC()">Generate HMAC</button>
+        <div class="button-container">
+            <button onclick="generateHMAC()">Generate HMAC</button>
+        </div>
         <p class="hmac-output"></p>
     </div>
 
     <script src="decrypt.js"></script>
+
+    <div class="dropdown">
+        <button class="dropbtn">⨀Ξ〄⋑</button>
+        <div class="dropdown-content">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="decrypt.html">Encrypt/Decrypt</a>
+            <a href="cryptology.html">Cryptography</a>
+        </div>
+    </div>
+    <footer>
+        <!--<p>The End Project Solvers: <a href="https://discord.com/invite/eJGpsbpM86">Discord</a></p>-->
+        <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
+        <!--<p>Version 1.0 | Contact: <a href="mailto:zs6avz@proton.me">zs6avz@proton.me</a></p>-->
+    </footer>
 </body>
 </html>
