--- a/about.html
+++ b/about.html
@@ -13,14 +13,21 @@
     <h1>About Us</h1>
     <br>
     <p>
-        TEPS is a research and decoding community focused on solving The End Project (TEP), a cryptic and multimedia experience created by an external entity known as "The Keeper." We analyze media, decode ciphers, and collaborate to uncover meaning and structure behind TEP's signals.   
+        TEPS is a research and decoding community focused on solving The End Project (TEP), a cryptic multimedia experience created by an external entity known as "The Keeper."   
+    </p>
+    <p>    
+        We analyze media, decode ciphers, and collaborate to uncover the meaning and structure behind TEP's signals.
     </p>
     <br>
     <p>
         The TEP Cipher Translator was created to assist in decoding the various ciphers used in TEP. It provides a user-friendly interface for translating text and offers resources for further exploration of cryptology.
-        We welcome contributions, feedback, and collaboration from anyone interested in the world of cryptology.
-        If you have any questions or would like to get involved, please reach out to us.
     </p>
+    <p>
+        We welcome contributions, feedback, and collaboration from anyone interested in the world of cryptology.
+    </p>
+    <p>
+        If you have any questions or would like to get involved, please reach out to us.
+    </p>    
     <p>
         The End Project Solvers @ <a href="https://discord.com/invite/eJGpsbpM86">Discord</a>
     </p>
