--- a/cryptology.html
+++ b/cryptology.html
@@ -8,7 +8,7 @@
     <script src="script.js" defer></script>
 </head>
 <body class="cryptology-page">
-    <h1>Cryptology Resources</h1>
+    <h1>Cryptography Resources</h1>
 
     <!-- Resources Section -->
     <section>
