--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="decrypt.html">Encrypt/Decrypt</a>
-            <a href="cryptology.html">Cryptography</a>
+            <a href="cryptography.html">Cryptography</a>
         </div>
     </div>
 
