--- a/decrypt.html
+++ b/decrypt.html
@@ -203,7 +203,7 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="decrypt.html">Encrypt/Decrypt</a>
-            <a href="cryptology.html">Cryptography</a>
+            <a href="cryptography.html">Cryptography</a>
         </div>
     </div>
     <footer>
