--- a/decrypt.html
+++ b/decrypt.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </head>
 <body class="decrypt-page">
-    <h1>Decrypt Methods</h1>
+    <h1>Encrypt/Decrypt Methods</h1>
 
     <!-- Binary -->
     <div class="method">
