--- a/decrypt.html
+++ b/decrypt.html
@@ -101,7 +101,7 @@
         <p class="morse-output"></p>
     </div>
 
-    <!-- AES -->
+    <!-- AES 
     <div class="method">
         <h2>AES</h2>
         <textarea class="AES-input" placeholder="Enter text..."></textarea>
@@ -119,7 +119,7 @@
         <p class="AES-output"></p>
     </div>
 
-    <!-- DES -->
+    <!-- DES 
     <div class="method">
         <h2>DES</h2>
         <textarea class="DES-input" placeholder="Enter text..."></textarea>
@@ -135,7 +135,7 @@
         <p class="DES-output"></p>
     </div>
 
-    <!-- Triple DES -->
+    <!-- Triple DES 
     <div class="method">
         <h2>Triple DES</h2>
         <textarea class="TripleDES-input" placeholder="Enter text..."></textarea>
@@ -151,7 +151,7 @@
         <p class="TripleDES-output"></p>
     </div>
 
-    <!-- RC4 -->
+    <!-- RC4 
     <div class="method">
         <h2>RC4</h2>
         <textarea class="RC4-input" placeholder="Enter text..."></textarea>
@@ -163,7 +163,7 @@
         <p class="RC4-output"></p>
     </div>
 
-    <!-- Rabbit -->
+    <!-- Rabbit 
     <div class="method">
         <h2>Rabbit</h2>
         <textarea class="Rabbit-input" placeholder="Enter text..."></textarea>
@@ -175,7 +175,7 @@
         <p class="Rabbit-output"></p>
     </div>
 
-    <!-- SHA-256 Hashing -->
+    <!-- SHA-256 Hashing 
     <div class="method">
         <h2>SHA-256</h2>
         <textarea class="sha256-input" placeholder="Enter text to hash..."></textarea>
@@ -185,7 +185,7 @@
         <p class="sha256-output"></p>
     </div>
 
-    <!-- HMAC Authentication -->
+    <!-- HMAC Authentication 
     <div class="method">
         <h2>HMAC Authentication</h2>
         <textarea class="hmac-input" placeholder="Enter text to generate HMAC..."></textarea>
@@ -193,7 +193,7 @@
             <button onclick="generateHMAC()">Generate HMAC</button>
         </div>
         <p class="hmac-output"></p>
-    </div>
+    </div>-->
 
     <script src="decrypt.js"></script>
 
