--- a/decrypt.html
+++ b/decrypt.html
@@ -57,8 +57,8 @@
         <textarea class="vigenere-input" placeholder="Enter text..."></textarea>
         <input type="text" class="vigenere-key" placeholder="Enter key">
         <div class="button-container">
-            <button onclick="encryptVigenere(document.querySelector('.vigenere-key').value)">Encrypt</button>
-            <button onclick="decryptVigenere(document.querySelector('.vigenere-key').value)">Decrypt</button>
+            <button class="encrypt-btn">Encrypt</button>
+            <button class="decrypt-btn">Decrypt</button>
         </div>
         <p class="vigenere-output"></p>
     </div>
