--- a/decrypt.html
+++ b/decrypt.html
@@ -74,6 +74,17 @@
         <p class="atbash-output"></p>
     </div>
 
+    <!-- Hexadecimal Cipher -->
+    <div class="method">
+        <h2>Hexadecimal Cipher</h2>
+        <textarea class="hex-input" placeholder="Enter text..."></textarea>
+        <div class="button-container">
+            <button onclick="encryptHex()">Encrypt</button>
+            <button onclick="decryptHex()">Decrypt</button>
+        </div>
+        <p class="hex-output"></p>
+    </div>
+
     <!-- Base64 -->
     <div class="method">
         <h2>Base64</h2>
