--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         <div class="dropdown-content">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="decrypt.html">Encrypt/Decrypt</a>
+            <!--<a href="decrypt.html">Encrypt/Decrypt</a>-->
             <a href="cryptography.html">Cryptography</a>
         </div>
     </div>
