--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
         <div class="dropdown-content">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="decrypt.html">Encrypt/Decrypt</a>
+            <!--<a href="decrypt.html">Encrypt/Decrypt</a>-->
             <a href="cryptography.html">Cryptography</a>
         </div>
     </div>
