--- a/decrypt.html
+++ b/decrypt.html
@@ -6,6 +6,7 @@
     <title>Decrypt</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <script src="decrypt.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </head>
 <body class="decrypt-page">
