--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     </p>
     <br>
     <p>
-        The TEP Cipher Translator was created to assist in decoding the various ciphers used in TEP. It provides a user-friendly interface for translating text and offers resources for further exploration of cryptology.
+        The TEP Cipher Translator was created to assist in decoding the various ciphers used in TEP. It provides a user-friendly interface for translating text and offers resources for further exploration of cryptography.
     </p>
     <p>
         We welcome contributions, feedback, and collaboration from anyone interested in the world of cryptology.
@@ -49,7 +49,7 @@
     <footer>
         <!--<p>The End Project Solvers: <a href="https://discord.com/invite/eJGpsbpM86">Discord</a></p>-->
         <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
-        <p>Version 1.0 | Contact: <a href="mailto:zs6avz@proton.me">zs6avz@proton.me</a></p>
+        <!--<p>Version 1.0 | Contact: <a href="mailto:zs6avz@proton.me">zs6avz@proton.me</a></p>-->
     </footer>
     
 </body>
