--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <link rel="icon" type="image/png" sizes="16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
+    <!-- Thumbnail -->
+    <meta property="og:title" content="TranslatorTEP">
+    <meta property="og:description" content="A cryptography tool for translation and encoding.">
+    <meta property="og:image" content="https://https://tepcipher.online/Fox Thumbnail.png">
+    <meta property="og:url" content="https://https://tepcipher.online/">
+    <meta name="twitter:card" content="summary_large_image">
+
     <script src="script.js" defer></script>
 </head>
 <body class="home-page">
