--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
+        <p>&copy; 2025 ⚲⎐⚷⎔⌖∷⚲ ⌬◎⊗</p>
     </footer>
 
     <script>
